# Network-Learn

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: Linux.yml  Windows.yml  codeql-analysis.yml
TinyWebServer/: CMakeLists.txt  README.md
TinyWebServer/src/: abstractservices.h  abstractsocket.h  connectionpool.cpp  connectionpool.h  define.h  epoll.cpp  epoll.h  event.cpp  event.h  httprequest.cpp  httprequest.h  httpresponse.cpp  httpresponse.h  httpservices.cpp  httpservices.h  main.cpp  sslsocket.cpp  sslsocket.h  tcpsocket.cpp  tcpsocket.h  threadpool.h  timermanager.h  until.h  webserver.cpp  webserver.h
TinyWebServer/src/abstract/: abstractservices.h  abstractsocket.cpp  abstractsocket.h
TinyWebServer/src/core/: connectionpool.cpp  connectionpool.h  epoll.cpp  epoll.h  epoll_nix.cpp  epoll_win.cpp  eventloop.cpp  eventloop.h  sslsocket.cpp  sslsocket.h  tcpsocket.cpp  tcpsocket.h  wepoll.c  wepoll.h
TinyWebServer/src/http/: httprequest.cpp  httprequest.h  httpresponse.cpp  httpresponse.h  httpservices.cpp  httpservices.h  url.h
TinyWebServer/src/until/: timermanager.h  until.h
TinyWebServer/src/util/: backtrace.cpp  backtrace.h  event.h  headermap.h  sharedfilepool.cpp  sharedfilepool.h  timermanager.h  util.h
